--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "aoc-cache"
 description = "A way of caching your input from the great and popular Advent of Code"
 repository = "https://github.com/glennib/aoc-cache"
-version = "0.1.4"
+version = "0.2.0"
 edition = "2021"
 keywords = ["puzzles", "advent-of-code"]
 categories = ["caching"]
@@ -11,8 +11,10 @@ license = "Unlicense"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11", features = ["blocking", "cookies"] }
+cookie = "0.16.1"
+cookie_store = "0.16.0"
 scratch = "1"
 thiserror = "1"
 tracing = ">=0.1.36"
+ureq = { version = "2.5.0", features = ["cookies"] }
 url = "2"
